--- a/locales/en-US/translations.json
+++ b/locales/en-US/translations.json
@@ -15,10 +15,20 @@
   "Aucuns frais d’inscription": "No registration fees",
   "inscrivez-vous": "register",
   "cliquez ici": "Click here",
-  "logo": "./image/logo-header-EN.png",
-  "accueils1image": "./image/pub-header-home-en_EN.png",
-  "accueils3image1": "./image/pub-cell.png",
+  "soumettre" : "Submit",
+  "accueils1image": "./image/pub-header-3_EN.png",
+  "accueils3image1": "./image/cell-img-1.png",
   "accueils3image2": "./image/img-camion-prix_EN.png",
+  "accueilImg5" : "./image/icone-chrono.png",
+  "accueilImg6" : "./image/icone-eco-sociale.png",
+  "accueilImg7" : "./image/icone-inclusions.png",
+  "accueilImg8" : "./image/icone-cochonnet.png",
+  "accueilImg11" : "./image/icone-eco-social.png",
+  "accueilImg12" : "./image/paysage-img.png",
+  "UserIcon" : "./image/user-icon.png",
+  "calendarIcon" : "./image/icone-calendrier.png",
+  "unlockIcon" : "./image/unlock-icon.png",
+  "volantIcon" : "./image/icone-volant.png",
   "accueils3header": "Take possession of your truck with no delays, no waiting!",
   "accueils3t1": "Once you complete your free registration, simply choose the vehicle you need and make an hourly or daily reservation. Your rental will be charged directly to the credit card number you gave us when you registered.",
   "accueils3t2": "Our hourly rental rates are very competitive, and include gas and protection!",
@@ -53,6 +63,7 @@
   "Solution2Texte2": "If your community organization, i.e., non-profit organization, needs a truck from time to time to perform charity work, you may be able to use one of ours for free.*",
   "Solution2Texte3": "To qualify, all you have to do is fill out the short questionnaire below. Be sure to explain your mission and the precise nature of the project for which you need a truck. We will carefully consider and respond to all applications.",
   "Solution3Header1": "Information on community organization",
+  "Envoyer la demande" :"Send the application",
   "Solution3Secret1": "If you are a human and are seeing this field, please leave it blank.",
   "Organisme": "Organization",
   "Adresse" : "Address",
@@ -82,12 +93,12 @@
   "Solution4Header1" : "Short description of the project for which you need a truck.",
   "Solution4Texte1" : "Be sure to specify the date of the event and how long you’ll be needing the truck for.",
   "Solution4Texte2" : "Attach a supporting file to your application (optional).",
-  "Solution4Texte3" : "instance, the driver must meet the minimum age requirement and have a valid driver’s license. If your application is accepted, we’ll provide the full details.",
+  "Solution4Texte3" : "*Some conditions apply. For instance, the driver must meet the minimum age requirement and have a valid driver’s license. If your application is accepted, we’ll provide the full details.",
   "Commentaires" : "Comments",
   "Par téléphone" : "By phone",
   "numeroTelephone" : "1 844 595-4273",
   "Par courriel" : "By email",
-  "courriel" : "libre@discountquebec.com",
+  "ContactCourriel" : "libre@discountquebec.com",
   "Par la poste" : "By mail",
   "FullAdress" : "2555, boul. Des Sources, Pointe-Claire (Québec) H9R 5Z3 CANADA",
   "Écrivez-nous!": "Write us!",
@@ -116,7 +127,7 @@
   "AdFAQ9Texte1" : "There is no app to download. Go to discountlibre.com for more details.",
   "AdFAQ10Header1" : "How can I contact Discount Self-Service customer service?",
   "AdFAQ10Texte1" : "Call 1-844-595-4273 or send an email to ",
-  "AdFAQ10courriel" : "mailto:libre@discountquebec.com",
+  "AdFAQ10courriel" : "libre@discountquebec.com",
   "AdFAQ11Header1" : "Can companies/organizations register?",
   "AdFAQ11Texte1" : "Yes, we have a program for companies and organizations. Consult the Ecosocial Solution page on our website.",
   "AdFAQ12Header1" : "Can I register with a license from another province or country?",
@@ -244,7 +255,6 @@
   "FaFAQ7Texte1" : "No, rentals are charged to the credit card on your customer account.",
   "FaFAQ8Header1" : "Where can I change my credit card information?",
   "FaFAQ8Texte1" : "Login to your account on our website with your smartphone and update your information on the My Profile page.",
-  "Mon compte" : "My Account",
   "CoFAQ1Header1" : "How can I access my account or update my customer account information?",
   "CoFAQ1Texte1" : "Login to your account on our website with your smartphone and update your information on the My Profile page.",
   "CoFAQ2Header1" : "Where can I find my previous reservations?",
@@ -254,7 +264,8 @@
   "reservez" : "Reserve",
   "actif1Texte1" : "*Taxes and mileage not included. 59¢/km. Valid driver’s license required. Some restrictions apply:",
   "actif1Texte2" : "https://www.discountquebec.com/libreservice/faq-en/",
-  "actif1Texte3" : "Click here for more information.",
+  "actif1Texte3" : "Click here",
+  "actif1Texte4" : " for more information.",
   "Fourgonnette" : "Cargo Van",
   "SEMAINE" : "WEEK",
   "FIN DE SEMAINE" : "WEEKEND*",
@@ -271,5 +282,27 @@
   "fonctionnement3Texte1" : "Go to your rental truck, log in to your account, and unlock the doors via your smartphone.",
   "fonctionnement4header1" : "4. Drive",
   "fonctionnement4Texte1" : "Do what you need to do with your truck and return it to exactly the same place at the end of your rental period.",
-  "fonctionnementVideo" : "https://www.youtube.com/embed/Cczvv04YV5c"
+  "fonctionnementVideo" : "https://www.youtube.com/embed/Cczvv04YV5c",
+  "solutionImg1" : "./image/pub-header-écosociale-en.png",
+  "contactImg1" : "./image/pub-header-contact.png",
+  "contactImg2" : "./image/icone-telephone.png",
+  "contactImg3" : "./image/icone-telephone.png",
+  "contactImg4" : "./image/icone-email.png",
+  "contactImg5" : "./image/icone-poste.png",
+  "FAQImg1" : "./image/pub-header-faq-en.png",
+  "FAQImg2" : "./image/Header-top-cell-FAQ.jpg",
+  "fonctionnementImg1" : "./image/pub-header-howitworks-en.jpg",
+  "fonctionnementImg2" : "./image/pub-header-3.jpg",
+  "tarifImg1" : "./image/page-pub_FR.png",
+  "tarifImg2" : "./image/header-pub-tarifs-de-location.jpg",
+  "tarifImg3" : "./image/img-savana.png",
+  "linkInscription" : "https://www4.rentcentric.com/Client6145/DiscountQuebecSelfServiceMobile/DQinscription.aspx?LocationCode=LAX&amp;lang=en",
+  "linkToTarif" : "https://www.discountquebec.com/libreservice/tarifs/",
+  "linkToFaq" : "https://www.discountquebec.com/libreservice/faq-fr/",
+  "linkTosolution" : "https://www.discountquebec.com/libreservice/solution/",
+  "fonctionnementlink1" : "https://www4.rentcentric.com/Client6145/DiscountQuebecSelfServiceMobile/DQinscription.aspx?LocationCode=LAX&lang=en",
+  "logo": "./image/logo-header-EN.png",
+  "accueils1image": "./image/pub-header-home-en_EN.png",
+  "accueils3image1": "./image/pub-cell.png",
+  "accueils3image2": "./image/img-camion-prix_EN.png"
 }
