--- a/locales/fr/translations.json
+++ b/locales/fr/translations.json
@@ -15,10 +15,20 @@
   "Aucuns frais d’inscription": "Aucuns frais d’inscription",
   "inscrivez-vous": "inscrivez-vous",
   "cliquez ici": "cliquez ici",
-  "logo": "./image/logo-libre-service.png",
+  "soumettre" : "Soumettre",
   "accueils1image": "./image/pub-header-3_FR.png",
   "accueils3image1": "./image/cell-img-1.png",
   "accueils3image2": "./image/img-camion-prix_FR.png",
+  "accueilImg5" : "./image/icone-chrono.png",
+  "accueilImg6" : "./image/icone-eco-sociale.png",
+  "accueilImg7" : "./image/icone-inclusions.png",
+  "accueilImg8" : "./image/icone-cochonnet.png",
+  "accueilImg11" : "./image/icone-eco-social.png",
+  "accueilImg12" : "./image/paysage-img.png",
+  "UserIcon" : "./image/user-icon.png",
+  "calendarIcon" : "./image/icone-calendrier.png",
+  "unlockIcon" : "./image/unlock-icon.png",
+  "volantIcon" : "./image/icone-volant.png",
   "accueils3header": "Sans délai ni attente, prenez possession de votre camion!",
   "accueils3t1": "Une fois l’inscription gratuite complétée, il vous suffira de choisir le véhicule et de réserver à l’heure ou à la journée. Le paiement se fera directement sur votre carte de crédit enregistrée lors de votre inscription.",
   "accueils3t2": "Nos tarifs de location à l’heure sont très avantageux et incluent l’essence et les protections!",
@@ -53,6 +63,7 @@
   "Solution2Texte2": "Si vous êtes un organisme communautaire, donc à but non lucratif, et que vous avez occasionnellement besoin d’un camion pour l’une de vos activités de bienfaisance, il pourrait être possible que vous puissiez utiliser l’un des nôtres sans aucuns frais*.",
   "Solution2Texte3": "Pour permettre à votre organisme de vous qualifier pour cette gratuité, il suffit de remplir le bref questionnaire ci-dessous en prenant soin de nous expliquer votre mission et la nature exacte du projet pour lequel vous avez besoin d’un camion. Toutes les demandes seront considérées avec soin et recevront une réponse.",
   "Solution3Header1": "Informations sur l’organisme communautaire",
+  "Envoyer la demande" :"Envoyer la demande",
   "MessageSecret1": "Si vous êtes un humain et que vous voyez ce champ, veuillez le laisser vide.",
   "Organisme": "Organisme",
   "Adresse" : "Adresse",
@@ -87,7 +98,7 @@
   "Par téléphone" : "Par téléphone",
   "numeroTelephone" : "1 844 595-4273",
   "Par courriel" : "Par courriel",
-  "courriel" : "libre@discountquebec.com",
+  "ContactCourriel" : "libre@discountquebec.com",
   "Par la poste" : "Par la poste",
   "FullAdress" : "2555, boul. Des Sources, Pointe-Claire (Québec) H9R 5Z3 CANADA",
   "Écrivez-nous!": "Écrivez-nous!",
@@ -116,7 +127,7 @@
   "AdFAQ9Texte1" : "Il n’y a aucune application à  télécharger. Rendez-vous tout simplement sur notre site web discountlibre.com pour plus de détails.",
   "AdFAQ10Header1" : "Comment rejoindre le service à  la clientèle de Discount Libre-Service?",
   "AdFAQ10Texte1" : "Composez 1 844-595-4273 ou envoyez un courriel sur ",
-  "AdFAQ10courriel" : "mailto:libre@discountquebec.com",
+  "AdFAQ10courriel" : "libre@discountquebec.com",
   "AdFAQ11Header1" : "Offrez-vous une adhésion pour les entreprises / organismes?",
   "AdFAQ11Texte1" : "Oui, nous avons un programme pour les entreprises et organismes. Consultez la page Solution ÉcoSociale sur le site web.",
   "AdFAQ12Header1" : "Est-ce que je peux adhérer avec un permis international ou d'une autre province?",
@@ -244,7 +255,6 @@
   "FaFAQ7Texte1" : "Non, la location est facturée à  la carte de crédit présente dans votre compte client.",
   "FaFAQ8Header1" : "Où dois-je changer mes informations de la carte de crédit?",
   "FaFAQ8Texte1" : "Connectez-vous à  votre compte sur notre site web à  partir de votre téléphone intelligent et procédez à  la mise à  jour de vos informations dans la Page Mon Profil.",
-  "Mon compte" : "Mon compte",
   "CoFAQ1Header1" : "Comment accéder à  mon compte ou comment puis-je faire la mise à  jour de mes informations dans mon compte client?",
   "CoFAQ1Texte1" : "Connectez-vous à  votre compte sur notre site web à  partir de votre téléphone intelligent et procédez à  la mise à  jour de vos informations dans la page Mon Profil.",
   "CoFAQ2Header1" : "Où puis-je trouver mes réservations antérieures?",
@@ -254,7 +264,8 @@
   "reservez" : "reservez",
   "actif1Texte1" : "*Taxes et kilométrage en sus. 59¢/km. Permis de conduire valide obligatoire. Des restrictions s’appliquent,",
   "actif1Texte2" : "https://www.discountquebec.com/libreservice/faq-fr/",
-  "actif1Texte3" : "cliquez ici pour d’avantage d’information.",
+  "actif1Texte3" : "cliquez ici",
+  "actif1Texte4" : " pour d’avantage d’information.",
   "Fourgonnette" : "Fourgonnette",
   "SEMAINE" : "SEMAINE",
   "FIN DE SEMAINE" : "FIN DE SEMAINE*",
@@ -272,39 +283,23 @@
   "fonctionnement4header1" : "4. Roulez",
   "fonctionnement4Texte1" : "Démarrez, c’est le moment de vaquer à vos activités. Prévoyez retourner le véhicule exactement au même endroit à la fin de votre location.",
   "fonctionnementVideo" : "https://www.youtube.com/embed/R3_a7nvoLKE",
-  "accueilImg1" : "./image/menu-burger2.png",
-  "accueilImg2" : "./image/logo-libre-service.png",
-  "accueilImg3" : "./image/pub-header-3_FR.png",
-  "accueilImg4" : "../image/pub-header-3_FR.png",
-  "accueilImg5" : "./image/icone-chrono.png",
-  "accueilImg6" : "./image/icone-eco-sociale.png",
-  "accueilImg7" : "./image/icone-inclusions.png",
-  "accueilImg8" : "./image/icone-cochonnet.png",
-  "accueilImg9" : "./image/cell-img-1.png",
-  "accueilImg10" : "./image/img-camion-prix_FR.png",
-  "accueilImg11" : "./image/icone-eco-social.png",
-  "accueilImg12" : "./image/paysage-img.png",
-  "accueilImg13" : "./image/user-icon.png",
-  "accueilImg14" : "./image/icone-calendrier.png",
-  "accueilImg15" : "./image/unlock-icon.png",
-  "accueilImg16" : "./image/icone-volant.png",
-  "accueilImg17" : "./image/logo-libre-service.png",
-  "solutionImg1" : "./image/header-pub.png",
-  "solutionImg2" : "./image/pub-header-2.png",
-  "solutionImg3" : "./image/icone-telephone.png",
-  "solutionImg4" : "./image/icone-poste.png",
-  "solutionImg5" : "./image/icone-email.png",
-  "solutionImg6" : "./image/img-pub.jpg",
+  "solutionImg1" : "./image/img-pub.png",
+  "contactImg1" : "./image/header-pub.png",
+  "contactImg2" : "./image/icone-telephone.png",
+  "contactImg3" : "./image/icone-telephone.png",
+  "contactImg4" : "./image/icone-email.png",
+  "contactImg5" : "./image/icone-poste.png",
   "FAQImg1" : "./image/pub-header-faq.png",
   "FAQImg2" : "./image/Header-top-cell-FAQ.jpg",
   "fonctionnementImg1" : "./image/pub-header-2.jpg",
   "fonctionnementImg2" : "./image/pub-header-3.jpg",
-  "fonctionnementImg3" : "./image/user-icon.png",
-  "fonctionnementImg4" : "./image/icone-calendrier.png",
-  "fonctionnementImg5" : "./image/unlock-icon.png",
-  "fonctionnementImg6" : "./image/icone-volant.png",
   "tarifImg1" : "./image/page-pub_FR.png",
   "tarifImg2" : "./image/DISCOUNT-SINT-Libre-service-Tarifs-mobile-v3.png",
-  "tarifImg3" : "./image/img-savana.png"
-
+  "tarifImg3" : "./image/img-savana.png",
+  "logo": "./image/logo-libre-service.png",
+  "linkInscription" : "https://www4.rentcentric.com/Client6145/DiscountQuebecSelfServiceMobile/DQinscription.aspx?LocationCode=LAX&amp;lang=fr",
+  "linkToTarif" : "https://www.discountquebec.com/libreservice/tarifs/",
+  "linkToFaq" : "https://www.discountquebec.com/libreservice/faq-fr/",
+  "linkTosolution" : "https://www.discountquebec.com/libreservice/solution/",
+  "fonctionnementlink1" : "https://www4.rentcentric.com/Client6145/DiscountQuebecSelfServiceMobile/DQinscription.aspx?LocationCode=LAX&lang=fr"
 }
